fix(UI): fix bottom bar align

--- a/src/dapp/style.less
+++ b/src/dapp/style.less
@@ -534,7 +534,7 @@ body {
         }
 
         .website {
-            text-align: right;
+            justify-content: flex-end;
         }
     }
 }
